fix: not wrapping wrote text items in drop down menu

--- a/css/header.css
+++ b/css/header.css
@@ -131,7 +131,7 @@
 }
 .navigation-bar .main-navigation ul ul li {
     float: none;
-    width: 150px;
+    min-width: 150px;
 }
 .navigation-bar .main-navigation ul ul li a {
     padding: 5px 10px;
